--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,10 @@
     "graphql": "^16.8.1",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
