--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,12 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "autoprefixer": "^10.4.16",
+    "bcryptjs": "^3.0.2",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
